# learn-guardrails

./: .gitignore  .gitmodules  app.py  main.py  pyproject.toml  run.ps1
config/: actions.py  actions.pyy  config.yml  off_topic.co  prompts.yml
config/kb/: intel_hardware.md  kubernetes.md
config/rails/: capabilities.co  factcheck.co  farewell.co  greetings.co  main.co  sensitive.co
