[project]
name = "learn-guardrails"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastembed>=0.8.0",
    "langchain-groq>=1.1.3",
    "logfire>=4.37.0",
    "nemoguardrails>=0.23.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.1",
]
