[project]
name = "learn-guardrails"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastembed>=0.8.0",
    "langchain-groq>=1.1.3",
    "logfire>=4.37.0",
    "nemoguardrails>=0.23.0",
    "pip>=26.1.2",
    "presidio-analyzer>=2.2.363",
    "presidio-anonymizer>=2.2.363",
    "python-dotenv>=1.2.2",
    "spacy>=3.8.13",
    "streamlit>=1.59.1",
]
